--- a/src/layout/header/header.css
+++ b/src/layout/header/header.css
@@ -8,7 +8,13 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding-top: 30px;
   height: var(--header-height);
+  margin-bottom: var(--mb-0-25);
+}
+.logo{
+  color: var(--title-color);
+  font-weight: var(--font-medium);
 }
 .header-menu {
   display: flex;
@@ -22,8 +28,8 @@
     color: var(--title-color);
     font-size: var(--small-font-size);
     font-weight: var(--font-normal);
-    :hover {
-      font-weight: var(--font-medium);
-    }
+  }
+  .link-item:hover{
+      color: var(--title-color-dark);
   }
 }
