--- a/src/layout/home/home.css
+++ b/src/layout/home/home.css
@@ -20,6 +20,7 @@
   align-items: flex-start;
   justify-content: space-between;
   gap: 20px;
+  margin-bottom: var(--mb-0-25);
 }
 .intro-subtitle {
   width: 40%;
