--- a/src/layout/home/home.css
+++ b/src/layout/home/home.css
@@ -1,8 +1,11 @@
-.home {
+.home{
+  width: 100vw;
+  height: 100vh;
+}
+.home-content {
   gap: 60px;
 }
 .home-side-menu {
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
@@ -32,10 +35,6 @@
   height: 1px;
   width: 40%;
   background-color: var(--text-color);
-}
-.intro-content {
-  color: var(--text-color);
-  margin-bottom: var(--mb-0-25);
 }
 .profile-image-container {
   background: url("../../assets/profile-pic.jpg");
